# ark-rust

./: Cargo.toml
.github/workflows/: build.yml  main_branch.yml
ark-cli/: Cargo.toml  README.md
ark-cli/src/: main.rs  util.rs
ark-cli/src/models/: cli.rs  storage.rs
data-link/: Cargo.toml
data-link/src/: lib.rs
data-resource/: Cargo.toml
data-resource/src/: blake3.rs  crc32.rs  lib.rs
dev-hash/: Cargo.toml  README.md
dev-hash/benches/: blake3.rs  crc32.rs
dev-hash/src/: blake3.rs  crc32.rs
fs-index/: Cargo.toml
fs-index/benches/: index_build_benchmark.rs
fs-index/examples/: index_watch.rs
fs-index/src/: index.rs  lib.rs  watch.rs
fs-metadata/: Cargo.toml
fs-properties/: Cargo.toml
fs-storage/: Cargo.toml
fs-storage/src/: file_storage.rs  utils.rs
index-registrar/: Cargo.toml
index-registrar/src/: lib.rs
