[workspace]
members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "index-registrar",
]

default-members = [
    "ark-cli",
    "data-error",
    "data-json",
    "data-link",
    "data-pdf",
    "data-resource",
    "fs-atomic-versions",
    "fs-atomic-light",
    "fs-metadata",
    "fs-properties",
    "fs-index",
    "fs-storage",
    "dev-hash",
    "index-registrar",
]

resolver = "2"
