[package]
name = "dev-hash"
version = "0.1.0"
edition = "2021"

[lib]
name = "dev_hash"
crate-type = ["rlib"]
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
log = "0.4"


data-resource = { path = "../data-resource" }
data-error = { path = "../data-error" }


# Hash type specefic dependencies
# CRC32
crc32fast = { version = "1.3" }
# Blake3
blake3 = { version = "1.5" }
hex = { version = "0.4" }
