[package]
name = "fs-index"
version = "0.1.0"
edition = "2021"

[lib]
name = "fs_index"
crate-type = ["rlib"]
bench = false

[dependencies]
data-error = { path = "../data-error" }
fs-storage = { path = "../fs-storage" }

# For now, we are explicitly using the non-cryptographic CRC-32 hash
# The developer is responsible for specifying consistent hash function in other crates
data-resource = { path = "../data-resource" }

log = { version = "0.4.17", features = ["release_max_level_off"] }
walkdir = "2.3.2"
anyhow = "1.0.58"
canonical-path = "2.0.2"
pathdiff = "0.2.1"
itertools = "0.10.5"

[dev-dependencies]
uuid = { version = "1.6.1", features = ["v4"] }
# benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
dev-hash = { path = "../dev-hash" }
fs-atomic-versions = { path = "../fs-atomic-versions" }

[[bench]]
name = "index_build_benchmark"
harness = false
path = "benches/index_build_benchmark.rs"
