[package]
name = "index-registrar"
version = "0.1.0"
edition = "2021"

[lib]
name = "index_registrar"
crate-type = ["rlib"]
bench = false

[dependencies]
log = { version = "0.4.17", features = ["release_max_level_off"] }
lazy_static = "1.4.0"
canonical-path = "2.0.2"

fs-index = { path = "../fs-index" }
fs-atomic-versions = { path = "../fs-atomic-versions" }
fs-storage = { path = "../fs-storage" }

data-error = { path = "../data-error" }
# Depending on `dev-hash` to get `ResourceId` reference implementations
dev-hash = { path = "../dev-hash" }
